--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -18,13 +17,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyDUcVKR_rz5oKLzRU1UAKVoy9VjFHjOlnI",
-    authDomain: "c-35-630ac.firebaseapp.com",
-    databaseURL: "https://c-35-630ac.firebaseio.com",
-    projectId: "c-35-630ac",
-    storageBucket: "c-35-630ac.appspot.com",
-    messagingSenderId: "711169184644",
-    appId: "1:711169184644:web:710779f8d96c5e6f7203d1"
+    apiKey: "AIzaSyCoe8eTYbqJoeHJ_tQ9SOuGYO60VCTCcBY",
+    authDomain: "c35form-25f3f.firebaseapp.com",
+    databaseURL: "https://c35form-25f3f.firebaseio.com",
+    projectId: "c35form-25f3f",
+    storageBucket: "c35form-25f3f.appspot.com",
+    messagingSenderId: "1048752671950",
+    appId: "1:1048752671950:web:3fd841679abda16e18549f"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
